Some more fiddling

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Initial Index (for Vite)</title>
   </head>
   <body>
-    <script async defer type="module" src="./ts/blades.ts"></script>
+    <script async defer type="module" src="./index.js"></script>
     <script>
       window.location = "/";
     </script>
